--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goit-node-rest-api",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "node ./app.js",
     "dev": "nodemon ./app.js"
@@ -8,8 +8,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "joi": "^17.11.0",
-    "morgan": "^1.10.0"
+    "joi": "^17.12.0",
+    "morgan": "^1.10.0",
+    "nanoid": "^5.0.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
