--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "joi": "^17.12.0",
+    "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.5",
     "uuid": "^9.0.1"
