--- a/envs/.env.example
+++ b/envs/.env.example
@@ -1,2 +1,3 @@
 PORT=3000
-DB_PASS=mongodb+srv://misko:misko_16@cluster0.v1bfckp.mongodb.net/
+DB_PASS='mongodb+srv://misko:misko_16@cluster0.v1bfckp.mongodb.net/'
+JWT_SECRET='197801Gr'
