--- a/package.json
+++ b/package.json
@@ -1,23 +1,40 @@
 {
-  "name": "goit-node-rest-api",
-  "type": "commonjs",
+  "name": "nodejs-homework-goit",
+  "version": "0.0.0",
+  "private": true,
+  "homepage": "https://zemfira1.github.io/nodejs-homework-GoIT/",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "cross-env NODE_ENV=production node ./server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
+    "lint": "eslint **/*.js",
+    "lint:fix": "eslint --fix **/*.js"
+  },
+  "engines": {
+    "node": ">18.16.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.2",
-    "express": "^4.18.2",
-    "joi": "^17.12.0",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
+    "dotenv": "^16.3.1",
+    "express": "4.17.1",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.10",
+    "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1",
-    "morgan": "^1.10.0",
-    "nanoid": "^5.0.5",
-    "uuid": "^9.0.1"
+    "mongoose": "7.6.3",
+    "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^3.3.6",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "eslint": "7.19.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "5.2.0",
+    "nodemon": "3.0.1"
   }
 }
