--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">18.16.1"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
