--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-DB_HOST=mongodb+srv://misko:misko_16@cluster0.v1bfckp.mongodb.net/
-PORT=3000
-JWT_SECRET='197801Gr'
+
+DB_HOST=
+PORT=
+JWT_SECRET=
