--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-homework-goit",
   "version": "0.0.0",
   "private": true,
-  "homepage": "https://zemfira1.github.io/nodejs-homework-GoIT/",
+  "homepage": "https://misko16/goit-node-rest-api/",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
