--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-homework-goit",
   "version": "0.0.0",
   "private": true,
-  "homepage": "https://misko16/goit-node-rest-api/",
+  "homepage": "https://zemfira1.github.io/nodejs-homework-GoIT/",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
@@ -14,32 +14,24 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cors": "2.8.5",
-    "cross-env": "7.0.3",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "express": "4.17.1",
-    "gravatar": "^1.8.2",
-    "jimp": "^0.22.10",
+    "express": "^4.17.1",
     "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "7.6.3",
-    "morgan": "1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
     "nanoid": "^3.3.6",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.11",
-    "eslint": "7.19.0",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.25.3",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "5.2.0",
-    "nodemon": "3.0.1"
+    "eslint-plugin-promise": "^5.2.0",
+    "nodemon": "^3.0.1"
   }
 }
