--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-homework-goit",
+  "name": "goit-node-rest-api",
   "version": "0.0.0",
   "private": true,
   "homepage": "https://misko16.github.io/goit-node-rest-api/",
