--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "start:single": "node ./helpers/SendEmail.js"
   },
   "engines": {
     "node": ">18.16.1"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -25,7 +27,7 @@
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.6",
+    "nanoid": "^3.3.7",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
